--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ border-radius:25px;
 <table align=center cellpadding="20">
   <tr>
     <td><p id="custom" class="leftmsg"> Happpyy Birthdayyy Prabhuuu !!! Mariyadhaiya lockdown mudinju coal barbeque la chinaadha oru treat kudu! Jollyyy  ahh  happyy ah iru. There is  lots of success and happiness waiting on your way!...... </p></td>
-    <td> <img class="image" src="nirmitha.jpeg" width="300" height="450" ></td>
+    <td> <img class="image" src="images/nirmitha.jpeg" width="300" height="450" ></td>
   </tr>
   <tr>
-    <td> <img class="image" src="kaviya.jpeg" alt="" width="300" height="450"> </td>
+    <td> <img class="image" src="images/kaviya.jpeg" alt="" width="300" height="450"> </td>
     <td> <p id="custom" class="leftmsg" font-size="15px" > Hapieee b'day Prabhu!!...be blessed, hapieee and safe da...ur awesome and be the same... Party hard!!! (Kandipa party mato venu da🥳) </p></td>
   </tr>
 </table>
@@ -59,7 +59,7 @@ border-radius:25px;
     <td><p>&nbsp;</p></td>
     <td>
       <video align=center width="500" height="450" cellpadding="20" controls autoplay>
-        <source src="vv.mp4" type="video/mp4">
+        <source src="vv.mp4" type="images/video/mp4">
       </video>
     </td>
     <td><p>&nbsp;</p></td>
@@ -68,10 +68,10 @@ border-radius:25px;
 <table align="center" cellpadding="20">  
   <tr>
     <td><p id="custom" class="rightmsg">Happy birthday to mama! I am so blessed to have you as my friend.. all the good times and stupid fights will be cherished forever and i hope you will not forget me once the cllg is finished..lots of love to you and to baby on board ...i am just so excited about the baby 🤗🤗❤❤</p></td>
-    <td> <img class="image" src="deepthi.jpeg" width="300" height="450" ></td>
+    <td> <img class="image" src="images/deepthi.jpeg" width="300" height="450" ></td>
   </tr>
   <tr>
-    <td> <img class="image" src="meena.jpeg" alt="" width="300" height="450"> </td>
+    <td> <img class="image" src="images/meena.jpeg" alt="" width="300" height="450"> </td>
     <td> <p id="custom" class="leftmsg" > Happiestt birthdayy my favourite pandaaaa❤🐼 May life bring you all the happiness you want✨and you deserve the besttt in this world 💫  </p></td>
   </tr>
   
