--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ border-radius:25px;
     <td><p>&nbsp;</p></td>
     <td>
       <video align=center width="500" height="450" cellpadding="20" controls autoplay>
-        <source src="vv.mp4" type="images/video/mp4">
+        <source src="images/vv.mp4" type="video/mp4">
       </video>
     </td>
     <td><p>&nbsp;</p></td>
