--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
  #custom{
   color:black;
   font-size: 40px;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Sansita Swashed', cursive;
  }
  #cus{
   color: rgb(3, 27, 54);
   font-size: 60px;
-  font-family: 'Satisfy', cursive;
+  font-family: 'Sansita Swashed', cursive;
  }
 
  #c{
