--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <style>
  body{
- background-image: url('back.jpg') ;
+ background-image: url('images/back.jpg') ;
   padding: 0px;
   margin: 0px;
   font-size: 16px;
